--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@emotion/styled": "^11.11.0",
     "@mui/icons-material": "^5.11.16",
     "@mui/material": "^5.13.0",
+    "axios": "^1.4.0",
     "bootstrap": "^5.2.3",
     "file-saver": "^2.0.5",
     "react": "^18.2.0",
